--- a/Bitacora_de_aprendizaje.html
+++ b/Bitacora_de_aprendizaje.html
@@ -42,8 +42,7 @@
         </ul>
         <br>
         <br>
-
-        <h2 style="color:#FF0000"><center>Bitacora de Aprendizaje</center></h2>
+        <h2 style="color:#FF0000"><center>Bitacora de Aprendizaje Computo III</center></h2>
         <br>
 
         <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -57,5 +56,24 @@
               <div class="accordion-body">
                 <a href="https://github.com/ManfredyQuintanilla/Practicas_ComputoII/tree/master">LINK REPOSITORIO</a>
             </div>
+          </div>
+        </div>
+        <br>
+        <h2 style="color:#FF0000"><center>Bitacora de Aprendizaje Computo III</center></h2>
+        <br>
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" " id="flush-headingOne">
+              <button class="accordion-button collapsed" style="background:rgb(213, 207, 107);" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                Acá podemos encontrar las prácticas, laboratorios, tareas semanales, etc.
+              </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                <a href="https://github.com/ManfredyQuintanilla/Actividades-Computo-III.git">LINK REPOSITORIO</a>
+            </div>
+          </div>
+        </div>
+        
     </div>
 </body>
