--- a/Carta_de_Presentacion.html
+++ b/Carta_de_Presentacion.html
@@ -91,6 +91,8 @@
             <li>Creacion de CRUD con laravel.</li>
             <li>Conexión de Base de datos MySQL.</li>
             <li>Un mejor manejo de Boostrap</li>
+            <li>Manejamiento de Express</li>
+            <li>Conexión con MongoDB</li>
           </ul>
 </div>
 </body>
