--- a/Contenidos.html
+++ b/Contenidos.html
@@ -111,6 +111,86 @@
               </div>
         </div>
 
+        <br>
+
+              <h2 style="color:#FF0000">Computo 3</h2>
+              <br>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingSeven">
+                  <button class="accordion-button collapsed"  style="background:rgb(213, 207, 107);" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseOne">
+                    Semana 13 - Vacaciones
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingEigth">
+                  <button class="accordion-button collapsed"  style="background:rgb(213, 207, 107);" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEigth>" aria-expanded="false" aria-controls="flush-collapseOne">
+                    Semana 14 - Parciales
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingNine">
+                  <button class="accordion-button collapsed"  style="background:rgb(213, 207, 107);" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseNine" aria-expanded="false" aria-controls="flush-collapseOne">
+                    Semana 15 - Introduccion nodejs
+                  </button>
+                </h2>
+                <div id="flush-collapseNine" class="accordion-collapse collapse" aria-labelledby="flush-headingTen" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body"><iframe src="Contenidos Programacion/Semana 15.pdf" width="100%" height="600px" ></iframe></object></div>
+                </div>
+              </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTen">
+            <button class="accordion-button collapsed"  style="background:rgb(213, 207, 107);" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTen" aria-expanded="false" aria-controls="flush-collapseOne">
+              Semana 16 Asincronismo en Node
+            </button>
+          </h2>
+          <div id="flush-collapseTen" class="accordion-collapse collapse" aria-labelledby="flush-headingTen" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body"><iframe src="Contenidos Programacion/Semana 16.pdf" width="100%" height="600px" ></iframe></object></div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingEleven">
+            <button class="accordion-button collapsed"  style="background:rgb(213, 207, 107);" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEleven" aria-expanded="false" aria-controls="flush-collapseOne">
+              Semana 17 Módulos en Node.js  
+            </button>
+          </h2>
+          <div id="flush-collapseEleven" class="accordion-collapse collapse" aria-labelledby="flush-headingEleven" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body"><iframe src="Contenidos Programacion/Semana 17.pdf" width="100%" height="600px" ></iframe></object></div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwelve">
+            <button class="accordion-button collapsed"  style="background:rgb(213, 207, 107);" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwelve" aria-expanded="false" aria-controls="flush-collapseOne">
+              Semana 18 Express
+            </button>
+          </h2>
+          <div id="flush-collapseTwelve" class="accordion-collapse collapse" aria-labelledby="flush-headingTwelve" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body"><iframe src="Contenidos Programacion/Semana 18.pdf" width="100%" height="600px" ></iframe></object></div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThirteen">
+            <button class="accordion-button collapsed"  style="background:rgb(213, 207, 107);" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThirteen" aria-expanded="false" aria-controls="flush-collapseOne">
+              Semana 19 Node.js con MongoDB
+            </button>
+          </h2>
+          <div id="flush-collapseThirteen" class="accordion-collapse collapse" aria-labelledby="flush-headingThirteen" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body"><iframe src="Contenidos Programacion/Semana 19.pdf" width="100%" height="600px" ></iframe></object></div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingFourteen">
+            <button class="accordion-button collapsed"  style="background:rgb(213, 207, 107);" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFourteen" aria-expanded="false" aria-controls="flush-collapseOne">
+              Semana 20 Socket.IO
+            </button>
+          </h2>
+          <div id="flush-collapseFourteen" class="accordion-collapse collapse" aria-labelledby="flush-headingFourteen" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body"><iframe src="Contenidos Programacion/Semana 20.pdf" width="100%" height="600px" ></iframe></object></div>
+          </div>
+        </div>
+        <br>
+        <br>
+
+
+
 
 
     </div>
