--- a/Jornalizacion.html
+++ b/Jornalizacion.html
@@ -74,6 +74,11 @@
             <img src="Jornalizacion/Semana 14.jpg"  width="100%" alt="">
             <br>
             <br>
+            <h2 style="color:#FF0000"><center>Jornalización de finales de Abril y Mayo</center></h2>
+            <br>
+            <img src="Jornalizacion/Abril y Mayo.png"  width="100%" alt="">
+            <br>
+            <br>
   </div>
 
 
